# omnigraph

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  docker-compose.test.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-import-resolution.js  test-import-resolution.mjs  test-js-parsing.js  test-metrics-flow.md  tsconfig.eslint.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
crates/og-analytics/: Cargo.toml
crates/og-analytics/src/: engine.rs  engine_v2.rs  lib.rs
crates/og-analytics/src/algorithms/: mod.rs
crates/og-analytics/src/analysis/: impact.rs  mod.rs  report.rs
crates/og-analytics/src/metrics/: centrality.rs  community.rs  mod.rs  quality.rs  risk.rs
crates/og-analytics/tests/: edge_cases.rs  integration.rs  modular_edge_cases.rs
crates/og-db/: Cargo.toml
crates/og-db/src/: lib.rs
crates/og-graph/: Cargo.toml
crates/og-graph/src/: builder.rs  graph.rs  lib.rs
crates/og-metrics-centrality/: Cargo.toml
crates/og-metrics-centrality/src/: lib.rs
crates/og-metrics-community/: Cargo.toml
crates/og-metrics-community/src/: lib.rs
crates/og-metrics-quality/: Cargo.toml
crates/og-metrics-quality/src/: lib.rs
crates/og-metrics-risk/: Cargo.toml
crates/og-metrics-risk/src/: lib.rs
crates/og-parser/: Cargo.toml
crates/og-parser/examples/: test_parser.rs
crates/og-parser/src/: c.rs  engine.rs  import_resolver.rs  javascript.rs  lib.rs  parser_trait.rs  python.rs  typescript.rs
crates/og-parser/tests/: import_resolution.rs
crates/og-services/: Cargo.toml
crates/og-services/src/: lib.rs
crates/og-types/: Cargo.toml
crates/og-types/src/: ast.rs  error.rs  graph.rs  lib.rs  metrics.rs
crates/og-utils/: Cargo.toml
crates/og-utils/src/: lib.rs  logging.rs  progress.rs
docs/: UI_IMPLEMENTATION.md
infra/config/: .prettierignore  .prettierrc.json  tsconfig.json  tsdoc.json  vitest.config.ts
media/css/: styles-3d.css  styles.css
plans/: EXTRACTION_PLAN.md  MIGRATION_PLAN.md  UI_IMPLEMENTATION.md  UI_PLAN.md  rust-engine-migration.md  rust-engine-pragmatic.md  weighitng.md
scripts/: cleanup-containers.sh
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: engine_v2.rs  graph_store.rs  lib.rs  lod.rs  main.rs
src/lod/: state.ts  types.ts
src/state/: events.ts  panels.ts
src/test/: .eslintrc.js  README.md  setup.ts  tsconfig.json
src/test/config/: test.config.ts
src/test/integration/: graph-generation.integration.test.ts  parser-service.integration.test.ts  testcontainers-setup.test.ts
src/test/test/sample-javascript/: sample-react-component.tsx  simple-javascript.js  simple-typescript.ts
src/test/test/sample-python/: sample_class.py  simple_module.py
src/test/testcontainers/: neo4j-container.ts  test-base.ts
src/test/unit/: testcontainers-config.test.ts
src/test/unit/container/: service-type-resolution.test.ts
src/test/unit/utils/: service-error-handler.test.ts
src/types/: metrics.ts
src/ui/: LodToolbar.ts
src/ui/components/: og-command-palette.ts  og-file-tree.ts  og-float-panel.ts  og-menu-bar.ts  og-panel.ts  og-properties-panel.ts
src/ui/panel-system/: panel-manager.ts  splitter-manager.ts
src/ui/styles/: panels.css
src/visualization/: graph3d.ts
