[workspace]
members = [
    "src-tauri",
    "crates/og-types",
    "crates/og-parser",
    "crates/og-graph", 
    "crates/og-db",
    "crates/og-analytics",
    "crates/og-services",
    "crates/og-utils"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
neo4rs = "0.7"
rayon = "1.8"
dashmap = "5"
indexmap = "2"
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-c = "0.20"